--- a/example.yml
+++ b/example.yml
@@ -1,6 +1,6 @@
 global:
   # Location to put output files
-  out_dir: /tmpaaaaq/agent
+  out_dir: /tmp/agent
 
   # Set this to True to skip verification of server SSL certificates.  This might
   # be useful if your Jira / Bitbucket server doesn't have a valid SSL certificate.
@@ -10,11 +10,28 @@ jira:
   # URL to jira
   url: https://jelly-ai.atlassian.net
 
-  # optional: only pull issues from specific projects.  Comment this out
+  # Uncomment this to print the list of available fields and exit
+  print_fields_only: True
+
+  # only pull issues from specific projects.  Comment this out
   # to pull issues from all projects.
-  # project_whitelist:
+  include_projects:
+    - MTP
+
+  # Uncomment this to pull issues from all but specific projects.
+  # exclude_projects:
   #   - PROJ1
-  #   - PROJ2
+
+  # Only pull specific fields on issues.  Comment this out
+  # to pull all fields.
+  # include_fields:
+  #   - id
+  #   - summary
+
+  # Uncomment this to pull all but specific fields on issues.
+  # exclude_fields:
+  #   - description
+  #   - comment
 
 # bitbucket:
 #   # URL to bitbucket
