Packaging as Docker image, dependencies via pipenv

--- a/Pipfile
+++ b/Pipfile
@@ -1,13 +1,16 @@
 [[source]]
-url = "https://pypi.org/simple"
+url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-[packages]
-jf-agent = {editable = true,path = "."}
-
-[dev-packages]
-twine = "*"
-
 [requires]
 python_version = "3.7"
+
+[packages]
+pyyaml = ">=4.21b"
+jira = {version = ">= 2.0.0, < 2.1"}
+tqdm = "*"
+stashy = "*"
+dateparser = "*"
+
+[dev-packages]
