--- a/example.yml
+++ b/example.yml
@@ -47,31 +47,37 @@ jira:
 
 
 git:
-  # Supported providers are `bitbucket_server` and `github`.
+  # Supported providers are `bitbucket_server`, 'gitlab' and `github`.
   provider: bitbucket_server
 
-  # URL to Bitbucket or GitHub.
+  # URL to Bitbucket, GitLab, or GitHub.
   # For GitHub Cloud, this should be https://api.github.com
   # For GitHub Enterprise, this should be https://github.yourcompany.com/api/v3 (note lack of trailing slash).
   # Otherwise, use the URL to your local git server.
   url: https://bitbucket.yourcompany.com
 
-  # Only pull from specific projects / organizations.
-  # Required for GitHub; comment this out to pull from all projects for Bitbucket Server.
-  # Note: use project keys, not names.
+  # Only pull from specific projects / organizations / groups.
+  # Bitbucket Server: use project keys, not names. Comment this out to pull from all projects.
+  # GitHub (required): use project keys, not names (ex: PROJ1)
+  # GitLab (required): use the top-level GitLab "Group ID" (ex: 123)
   include_projects:
       - PROJ1
 
   # Uncomment this to pull from all but specific projects (not supported for GitHub).
-  # Note: use project keys, not names.
+  # Bitbucket Server: use project keys, not names (ex: PROJ1)
+  # GitLab: use the top-level GitLab "Group ID" (ex: 123)
   #  exclude_projects:
   #    - PROJ1
 
   # Only pull from specific repos.  Comment this out to pull from all repos.
+  # Bitbucket Server or GitHub: use repository name (ex: my_repository)
+  # GitLab: use the GitLab "Project ID" (ex: 123)
   include_repos:
       - my_repository
 
   # Uncomment this to pull from all but specific repos.
+  # Bitbucket Server or GitHub: use repository name (ex: my_repository)
+  # GitLab: use the GitLab "Project ID" (ex: 123)
   # exclude_repos:
   #    - repo_to_skip
 
