--- a/example.yml
+++ b/example.yml
@@ -12,14 +12,27 @@ jira:
   # for Atlassian Cloud hosted Jira as of March 30, 2019.
   gdpr_active: False
 
-  # Only pull issues from specific projects.
-  # Comment this out to pull issues from all projects.
-  # Note: use project keys, not names.
+
+  #############################
+  # Options for filtering projects. Only data for projects that meet ALL
+  # these criteria will be used. For example, if you provide both
+  # `include_projects` and `include_project_categories` only the subset
+  # of named projects that are in the specified category will be
+  # included.
+  #############################
+
+  # Only pull issues from specific projects; omit to pull issues from
+  # all projects.
+  #
+  # Note: use Jira project keys, not names.
   include_projects:
     - PROJ1
     - PROJ2
 
-  # Uncomment this to pull issues from all but specific projects.
+  # Uncomment this to pull issues from all but specific projects. You
+  # will generally want to use either this OR `include_projects`, but
+  # not both.
+  #
   # Note: use project keys, not names.
   # exclude_projects:
   #   - PROJ1
@@ -32,10 +45,27 @@ jira:
   # exclude_project_categories:
   #   - Support
 
-  # Uncomment this to pull only issues matching a specific JQL filter
+  
+  #############################
+  # Options for filtering issues.  This filter is applied in addition
+  # to any project-level filters above, to control which issues are
+  # pulled for the given projects.
+  #############################
+
+  # Uncomment this to pull only issues matching a specific JQL
+  # filter. Use this if you need more fine-grained control over pulling
+  # just a subset of issues within a project.
   # issue_jql: 'text ~ pattern and issuetype != "Secret Type"'
 
-  # Uncomment this to pull only specific fields on issues.
+
+  #############################
+  # Options for filtering fileds.  Use these if you need fine-grained control
+  # over exactly which fields are pulled for each issue.  This can be useful
+  # if some of your fields contain sensitive data that you don't want to
+  # send to Jellyfish
+  #############################
+  
+  # Uncomment this to pull only specific fields on issues.    
   # include_fields:
   #   - id
   #   - summary
@@ -58,7 +88,7 @@ git:
 
   # Only pull from specific projects / organizations / groups.
   # Bitbucket Server: use project keys, not names. Comment this out to pull from all projects.
-  # GitHub (required): use project keys, not names (ex: PROJ1)
+  # GitHub (required): use your organization name, as it appears in your github URLs (ex: MyOrg)
   # GitLab (required): use the top-level GitLab "Group ID" (ex: 123)
   include_projects:
       - PROJ1
