--- a/example.yml
+++ b/example.yml
@@ -12,6 +12,29 @@ jira:
   # for Atlassian Cloud hosted Jira as of March 30, 2019.
   gdpr_active: False
 
+  # The earliest date for pulling issues into Jellyfish (format: YYYY-MM-DD).
+  # Most companies want at least a year's worth of issues pulled into Jellyfish.
+  # You'll generally just need to set this once, at onboarding time, and then
+  # not change it (regular, day-to-day runs of the agent will only pull issues
+  # that have been created or updated since the last run).  Comment out or omit
+  # to pull all issues into Jellyfish.
+  earliest_issue_dt: 2019-01-01
+
+  # The number of concurrent threads the agent will use for downloading issue data.
+  # It's unusual, but some Jira instances can be overwhelmed by more than one or
+  # two threads making concurrent requests to its API.  If your Jira instance is
+  # underpowered, you may want to set this to a low value.  If omitted, defaults
+  # to 10.
+  issue_download_concurrent_threads: 10
+
+  # The number of issues per page to request when we hit the Jira API.  Empirically,
+  # Jira Cloud won't return more than 100 issues at a time even if we ask for more,
+  # but Jira Server can do more; 250 is often a successful setting with Jira Server.
+  # If omitted, defaults to 100.
+  issue_batch_size: 100
+
+  # Whether the agent should download issue worklogs.  If omitted, defaults to True.
+  download_worklogs: True
 
   #############################
   # Options for filtering projects. Only data for projects that meet ALL
@@ -45,7 +68,7 @@ jira:
   # exclude_project_categories:
   #   - Support
 
-  
+
   #############################
   # Options for filtering issues.  This filter is applied in addition
   # to any project-level filters above, to control which issues are
@@ -64,8 +87,8 @@ jira:
   # if some of your fields contain sensitive data that you don't want to
   # send to Jellyfish
   #############################
-  
-  # Uncomment this to pull only specific fields on issues.    
+
+  # Uncomment this to pull only specific fields on issues.
   # include_fields:
   #   - id
   #   - summary
