--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# jf_agent configuration/credentials files (by convention)
+config.yml
+creds.env
+
+.bash_history
+
